welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: type mismatch;
 found   : Unit
 required: Int
	 else if (speed > 80 && !isBirthday) { return 2 } 
              ^