welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {

	if (speed <= 60 && !isBirthday) { return 0 }
	 else if (speed <=80 && !isBirthday) { return 1 }
	 else if (speed > 80 && !isBirthday) { return 2 } 
	 
}
